--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11336,7 +11336,7 @@ textarea.form-control-lg {
 
 header.masthead {
   position: relative;
-  background: url("../assets/img/bg-masthead.jpg") no-repeat center center;
+  background: url("src/assets/img/bg-masthead.jpg") no-repeat center center;
   background-size: cover;
   min-height: 36rem;
   z-index:1;
@@ -11394,7 +11394,7 @@ header.masthead h1, header.masthead .h1 {
 .call-to-action {
   position: relative;
   background-color: #343a40;
-  background: url("../assets/img/bg-masthead.jpg") no-repeat center center;
+  background: url("src/assets/img/bg-masthead.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 7rem;
   padding-bottom: 7rem;
